# Multimodal-Jarvis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  launch.py  main.py  pyproject.toml  requirements.txt  server.py
Docker/: .dockerignore  Dockerfile  docker-compose.yml
env/: database.env.example  production.env.example
src/: config.py  database.py  gradio_ui.py  i18n.py  logger.py  model.py
src/auth/: base_config.py  crud.py  manager.py  models.py  schemas.py  sessions.py
src/pages/: router.py
src/static/: custom_gradio.css  register_login.js  static.css  static_auth.css
src/templates/: main_page.html  userpage.html
src/translations/en/LC_MESSAGES/: messages.po
src/translations/uk/LC_MESSAGES/: messages.po
tests/: test_gradio.ipynb  test_main.py
